--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -9,7 +9,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@1
+    - uses: actions/checkout@v4
     - uses: jakejarvis/s3-sync-action@master
       with:
         args: --acl public-read --follow-symlinks --delete
