--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: ${{ secrets.AWS_REGION }}
       - name: Sync files to S3 bucket
         run: |
-          aws s3 sync build s3://harisheoran.xyz --delete
+          aws s3 sync build s3://${{secrets.AWS_S3_BUCKET}} --delete
