--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -16,4 +16,4 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Sync files to S3 bucket
         run: |
-          aws s3 sync build s3://${{secrets.AWS_S3_BUCKET}} --delete
+          aws s3 sync build s3://harisheoran.xyz --delete
