buildspec file for codebuild for api

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,8 @@ env:
 phases:
   build:
     commands:
+      - echo $DOCKER_USERNAME 
+      - echo $DOCKER_PASSWORD
       - cd tracker_api/
       - echo $DOCKER_USERNAME | docker login -u $DOCKER_USERNAME --password-stdin
       - docker build -t "$DOCKER_USERNAME/view_api_img:latest" .
