--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,13 +3,14 @@ env:
   parameter-store:
     DOCKER_USERNAME: docker_username
     DOCKER_PASSWORD: docker_password
+    DOCKER_URL: docker_url
 phases:
   build:
     commands:
       - echo $DOCKER_USERNAME 
       - echo $DOCKER_PASSWORD
       - cd tracker_api/
-      - echo $DOCKER_USERNAME | docker login -u $DOCKER_USERNAME --password-stdin
+      - echo $DOCKER_USERNAME | docker login -u $DOCKER_USERNAME --password-stdin $DOCKER_URL
       - docker build -t "$DOCKER_USERNAME/view_api_img:latest" .
       - docker push "$DOCKER_USERNAME/view_api_img:latest"
   post_build:
