added appspec file

--- a/appspec.yml
+++ b/appspec.yml
@@ -2,6 +2,10 @@ version: 0.0
 os: linux
 
 hooks:
+  ApplicationStop:
+    - location: echo "Hello"
+      timeout: 300
+      runas: root
 
   AfterInstall:
     - location: scripts/start_container.sh
