--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,6 +17,4 @@ phases:
 artifacts:
   files:
     - '**/*'
-  base-directory: base_dir
-  name: build-artifact-name
-  discard-paths: no
+  name: my-artifact
