iac fixed with conditionals, iac and script for vault

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ tracker_api/.env
     
 # Ignore Terraform files in the 'iac' directory
 iac/.terraform/
+vault/.terraform/
 
 # Ignore any .tfstate files
 *.tfstate
